--- a/requirements.txt
+++ b/requirements.txt
@@ -2,20 +2,24 @@ autopep8==1.4.4
 certifi==2019.11.28
 chardet==3.0.4
 defusedxml==0.6.0
+dj-database-url==0.5.0
 Django==2.2
 django-allauth==0.41.0
 django-countries==6.1.2
 django-crispy-forms==1.9.0
 django-debug-toolbar==2.2
+django-paypal==1.0.0
 idna==2.8
 oauthlib==3.1.0
 pep8==1.7.1
+Pillow==7.1.2
 pycodestyle==2.5.0
 python-decouple==3.3
 python3-openid==3.1.0
 pytz==2018.5
 requests==2.22.0
 requests-oauthlib==1.3.0
+six==1.15.0
 sqlparse==0.2.4
 stripe==2.46.0
 urllib3==1.25.8
